--- a/SWEA2383.md
+++ b/SWEA2383.md
@@ -1,5 +1,7 @@
 # 점심 식사시간
 
+https://swexpertacademy.com/main/main.do [2383] 점심 식사시간
+
 ## 개요
 
 N*N(<=10) Map이 주어진다. 사람들(<=10)이 1로 표기된다. 계단은 2개이며 1초과 10이하의 수로 표기된다. 사람들은 1분에 1칸씩 이동하며 계단위에 도착하면 1분이 지난 후에 계단을 내려갈 수 있다. 계단으로 주어진 수만큼의 분이 지나야 계단을 모두 내려간 것이다. 계단은 동시에 세 사람이상이 내려갈 수 없다. 모든 사람이 내려가는데 걸리는 최소 시간.
