--- a/SWEA5653.md
+++ b/SWEA5653.md
@@ -4,7 +4,7 @@ https://swexpertacademy.com/main/main.do [5653] 줄기세포배양
 
 ## 개요
 
-N\*M(1<=N,M<=50)의 맵에 줄기세포(X=1~10)들이 주어진다. 줄기세포들은 (X+1)~(2\*X-1)시간에 사방으로 번식하고 2\*X시간에 죽어 자리를 차지한다. 만약 줄기세포들이 같은 자리에 번식할 경우 X가 높은 줄기세포가 번식되게 된다. 배양시간 K(1<=K<=300)시간 후에 살아있는 줄기세포들을 구하는 문제
+N\*M(1<=N,M<=50)의 맵에 줄기세포(X=1\~10)들이 주어진다. 줄기세포들은 (X+1)\~(2\*X-1)시간에 사방으로 번식하고 2\*X시간에 죽어 자리를 차지한다. 만약 줄기세포들이 같은 자리에 번식할 경우 X가 높은 줄기세포가 번식되게 된다. 배양시간 K(1<=K<=300)시간 후에 살아있는 줄기세포들을 구하는 문제
 
 ## 분석
 
